# src/controller/interfaces/index.ts
@@ -8,3 +8,11 @@ export  interface IHelloController {
 export interface IGoodbyeController {
     getMessage(name?:string): Promise<DateResponse>
 }
+
+export interface IUserController {
+    //read all users || user by id from database
+    getUsers(id?: String): Promise<any>
+    deleteUser(id?: String): Promise<any>
+    createUser(user: any): Promise<any>
+    updateUser(id: String, user: any): Promise<any>
+}
